--- a/view/DetailLahan.fxml
+++ b/view/DetailLahan.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -44,7 +45,7 @@
                   <Font name="System Bold" size="16.0" />
                </font>
             </Button>
-            <Button fx:id="Datadiri_Button" alignment="BASELINE_LEFT" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="155.0" styleClass="navbtn" stylesheets="@Gradasi.css" text="📋Data Diri" textAlignment="CENTER" textFill="WHITE">
+            <Button fx:id="Datadiri_Button" alignment="BASELINE_LEFT" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#switchScene" prefHeight="40.0" prefWidth="155.0" styleClass="navbtn" stylesheets="@Gradasi.css" text="📋Data Diri" textAlignment="CENTER" textFill="WHITE">
                <padding>
                   <Insets left="20.0" />
                </padding>
@@ -52,7 +53,7 @@
                   <Font name="System Bold" size="16.0" />
                </font>
             </Button>
-            <Button fx:id="KontrakKerja_Button" alignment="BASELINE_LEFT" layoutX="10.0" layoutY="70.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="155.0" styleClass="navbtn" stylesheets="@Gradasi.css" text="📜Kontrak Kerja" textFill="WHITE">
+            <Button fx:id="KontrakKerja_Button" alignment="BASELINE_LEFT" layoutX="10.0" layoutY="70.0" mnemonicParsing="false" onAction="#switchScene2" prefHeight="41.0" prefWidth="155.0" styleClass="navbtn" stylesheets="@Gradasi.css" text="📜Kontrak Kerja" textFill="WHITE">
                <padding>
                   <Insets left="20.0" />
                </padding>
@@ -60,7 +61,7 @@
                   <Font name="System Bold" size="16.0" />
                </font>
             </Button>
-            <Button fx:id="Laporan_Button" alignment="BASELINE_LEFT" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="155.0" styleClass="navbtn" stylesheets="@Gradasi.css" text="📋Laporan" textFill="WHITE">
+            <Button fx:id="Laporan_Button" alignment="BASELINE_LEFT" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#switchScene3" prefHeight="40.0" prefWidth="155.0" styleClass="navbtn" stylesheets="@Gradasi.css" text="📋Laporan" textFill="WHITE">
                <padding>
                   <Insets left="20.0" />
                </padding>
@@ -73,7 +74,7 @@
                <children>
                   <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="75.0">
                      <children>
-                        <Button fx:id="Logout_Button" mnemonicParsing="false" prefHeight="31.0" prefWidth="37.0" styleClass="bg-white" text="🔓 " textFill="#1f691f" />
+                        <Button fx:id="Logout_Button" mnemonicParsing="false" onAction="#logout" prefHeight="31.0" prefWidth="37.0" styleClass="bg-white" text="🔓 " textFill="#1f691f" />
                      </children>
                   </HBox>
                   <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="79.0">
@@ -95,16 +96,20 @@
                 <!-- Detail Lahan -->
                 <HBox alignment="TOP_LEFT" spacing="15">
                     <ImageView fx:id="lahanImageView" fitHeight="200.0" fitWidth="200.0" />
-                    <VBox spacing="10">
+                    <VBox prefHeight="200.0" prefWidth="477.0" spacing="10">
                         <Label fx:id="namaLahanLabel" style="-fx-font-size: 16px;" text="Nama Lahan:" />
                         <Label fx:id="lokasiLabel" style="-fx-font-size: 16px;" text="Lokasi:" />
                         <Label fx:id="luasLabel" style="-fx-font-size: 16px;" text="Luas:" />
                         <Label fx:id="jenisLahanLabel" style="-fx-font-size: 16px;" text="Jenis Lahan:" />
                         <Label fx:id="jenisBibitLabel" style="-fx-font-size: 16px;" text="Jenis Bibit:" />
                     </VBox>
-                  <HBox alignment="CENTER" prefHeight="200.0" prefWidth="510.0">
+                  <HBox alignment="TOP_RIGHT" prefHeight="200.0" prefWidth="374.0">
                      <children>
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="63.0" prefWidth="126.0" text="Button" />
+                        <Hyperlink fx:id="kembali_Button" onAction="#switchScene4" prefHeight="47.0" prefWidth="234.0" text="&lt;&lt;Kembali ke halaman sebelumnya">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Hyperlink>
                      </children>
                   </HBox>
                 </HBox>
